force-app/main/default/objects/Gift_Register__c/Gift_Register__c.object-meta.xml
<CustomObject>
    <description>To Track Gifts Given and Received  by Staff</description>
    <label>Gift Register</label>
    <nameField>
        <label>Gift Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gifts Register</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>