force-app/main/default/objects/Gift_Register__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Was the gift accepted by the recipient?</inlineHelpText>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>