force-app/main/default/objects/Gift_Register__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account the individual Contact represents</description>
    <inlineHelpText>The Account the individual Contact represents</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gifts Register</relationshipLabel>
    <relationshipName>Gifts_Register</relationshipName>
    <type>Lookup</type>
</CustomField>