force-app/main/default/objects/Gift_Register__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The  Individual/Contact who gave or received the gift</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gifts Register</relationshipLabel>
    <relationshipName>Gifts_Register</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>