force-app/main/default/objects/Gift_Register__c/fields/Date_Given_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Given_Received__c</fullName>
    <inlineHelpText>What date was the gift given/received?</inlineHelpText>
    <label>Date Given/Received</label>
    <required>true</required>
    <type>Date</type>
</CustomField>