force-app/main/default/objects/Gift_Register__c/fields/Given_Received__c.field-meta.xml
<CustomField>
    <fullName>Given_Received__c</fullName>
    <inlineHelpText>Was the gift given or received?</inlineHelpText>
    <label>Given/Received</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Given</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>