force-app/main/default/objects/Gift_Register__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>The reason the gift was given/received.</inlineHelpText>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>