force-app/main/default/objects/Gift_Register__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>The actual or estimated value of the gift.</inlineHelpText>
    <label>Value ($)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>