force-app/main/default/objects/Gift_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Given_Received__c</columns>
    <columns>Date_Given_Received__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Value__c</columns>
    <columns>Accepted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>